Refactor dlc info endpoint
