# docs/openapi.json
@@ -37,10 +37,7 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "result": {
-                      "type": "string",
-                      "enum": ["success"]
-                    },
+                    "result": { "$ref": "#/components/schemas/SuccessResult" },
                     "data": {
                       "type": "object",
                       "propertyNames": { "pattern": "^[A-Z]{3}$" },
@@ -93,9 +90,72 @@
           }
         }
       }
+    },
+    "/v2/dlcinfo": {
+      "get": {
+        "parameters": [{"$ref": "#/components/parameters/AppId"}],
+        "responses": {
+          "default": {
+            "$ref": "#/components/schemas/ErrorResponse"
+          },
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "result": { "$ref": "#/components/schemas/SuccessResult" },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": { "type": "integer" },
+                          "name": { "type":  "string" },
+                          "description": { "type":  "string" }
+                        }
+                      }
+                    }
+                  }
+                },
+                "examples": {
+                  "successResponse": {
+                    "value": {
+                      "result": "success",
+                      "data": [
+                        {
+                          "id": 3,
+                          "name": "Cosmetic Content",
+                          "desc": "This DLC adds cosmetic or costume changes to your game."
+                        },
+                        {
+                          "id": 4,
+                          "name": "New In-Game Items",
+                          "desc": "This DLC adds new in-game items, weapons, vehicles, or other usable equipment."
+                        }
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
+    "parameters": {
+      "AppId": {
+        "name": "appid",
+        "in": "query",
+        "required": true,
+        "schema": {
+          "type": "integer"
+        }
+      }
+    },
     "schemas": {
       "ErrorResponse": {
         "type": "object",
@@ -103,12 +163,16 @@
           "result": {"type": "string", "enum": ["error"]},
           "error": {
             "type": "string",
-            "enum": [ "missing_param" ]
+            "enum": [ "missing_param", "invalid_value" ]
           },
           "error_description": {"type": "string"},
           "status_code": {"type": "integer"},
           "reason_phrase": {"type": "string"}
         }
+      },
+      "SuccessResult": {
+        "type": "string",
+        "enum": ["success"]
       },
       "CurrencyCode": {
         "type": "string",
