# src/Routing/Router.php
@@ -3,13 +3,14 @@ declare(strict_types=1);
 
 namespace AugmentedSteam\Server\Routing;
 
+use AugmentedSteam\Server\Config\CoreConfig;
+use AugmentedSteam\Server\Controllers\GameController;
 use AugmentedSteam\Server\Controllers\RatesController;
-use AugmentedSteam\Server\Routing\Response\ApiResponseFactory;
+use AugmentedSteam\Server\Routing\Response\ApiResponseFactoryInterface;
 use AugmentedSteam\Server\Routing\Strategy\ApiStrategy;
 use Laminas\Diactoros\ServerRequestFactory;
 use Laminas\HttpHandlerRunner\Emitter\SapiEmitter;
 use Psr\Container\ContainerInterface;
-use Psr\Http\Message\ResponseFactoryInterface;
 
 class Router
 {
@@ -20,15 +21,22 @@ class Router
     }
 
     public function route() {
-        $responseFactory = new ApiResponseFactory($this->container->get(ResponseFactoryInterface::class));
+        $responseFactory = $this->container->get(ApiResponseFactoryInterface::class);
 
-        $strategy = new ApiStrategy($responseFactory);
+        $strategy = new ApiStrategy(
+            $this->container->get(CoreConfig::class),
+            $responseFactory
+        );
         $strategy->setContainer($this->container);
 
         $router = new \League\Route\Router();
         $router->setStrategy($strategy);
 
         $router->get("/v1/rates/", [RatesController::class, "getRatesV1"]);
+
+        /** @deprecated */ $router->get("/v1/dlcinfo/", [GameController::class, "getDlcInfoV1"]);
+        $router->get("/v2/dlcinfo/", [GameController::class, "getDlcInfoV2"]);
+
 
         $request = ServerRequestFactory::fromGlobals();
         $response = $router->dispatch($request);
